# supreme-computing-machine

./: .gitignore  GETTING_STARTED.md  dune-project  flake.nix
.github/workflows/: ci.yml
bootloader/: assembler.ml  assembler.mli  dune  emitter.ml  emitter.mli  encoder.ml  encoder.mli  types.ml  types.mli  x86_asm.ml
lib/: dns_parser.ml  dune  header.ml  header.mli  packet.ml  packet.mli  question.ml  question.mli  read_buffer.ml  read_buffer.mli  serialize.ml  serialize.mli  types.ml  types.mli  write_buffer.ml  write_buffer.mli
test/: dune  test_dns.ml  test_x86.ml
unikernel/: dns_service.ml  dune  main.ml  net_intf.ml  net_unix.ml
